--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mysql-import": "^4.0.24"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
     "eslint-config-trybe-backend": "^1.0.4",
     "mysql2": "^2.1.0",
     "sequelize": "^6.2.0"
